@@ -1,3 +1,9 @@
+Thu Jan 28 16:02:50 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * tests/DCPS/UnitTests/DisjointSequence.cpp:
+
+          Fixed missing change to DisjointSequence unit test.
+
 Wed Jan 27 23:37:53 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.cpp:
